# aaindex

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  ToDo.md  __init__.py  aaindex.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: build_test.yml  deploy_pypi.yml  deploy_testpypi.yml
.github/workflows/: README.md  build_test.yml  deploy_pypi.yml  deploy_test_pypi.yml  deploy_testpypi.yml
aaindex/: README.md  __init__.py  _aaindex_matrix.py  aaindex.py  aaindex1.py  aaindex2.py  aaindex3.py
aaindex/data/: README.md  aaindex-to-category-parsed.txt  aaindex1.json
data/: aaindex_to_category.txt
docs/: README.md
docs/source/: changelog.rst  conf.py  index.rst  userGuide.rst
docs/source/api/: aaindex1.rst  aaindex2.rst  aaindex3.rst  aaindex_matrix.rst
tests/: README.md  test_aaindex.py  test_aaindex1.py  test_aaindex2.py  test_aaindex3.py
