[metadata]
name = aaindex
version = 1.1.1
author = AJ McKenna
author_email = amckenna41@qub.ac.uk
description = Software package for analysing and accessing the physiochemical and structural indices in the AAIndex.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amckenna41/aaindex
download_url = https://github.com/amckenna41/aaindex/archive/refs/heads/main.zip
license = MIT
status = Production
maintainer = AJ McKenna
keywords = 
    amino acid index
    aaindex
    bioinformatics
    protein engineering
    python
    pypi
    physiochemical properties
    biochemical properties
    proteins
    protein structure prediction
    pysar

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
python_requires = >=3.8
zip_safe = false
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-timeout
docs =
    sphinx

[tool:pytest]
norecursedirs = /docs/_build/*